--- a/resume/CVKrishnakumar_Resume.tex
+++ b/resume/CVKrishnakumar_Resume.tex
@@ -417,10 +417,10 @@
 {R.T. Durai Prabhakaran, B.J.C. Babu, V.P. Agrawal, C.V. Krishna Kumar, \emph{A knowledge-based system for constituent material selection in polymer composite product design }-  Proceedings of ISRS-2006, International Symposium for Research Scholars, IIT-Madras.}
 
 \section{\textbf{Skills}}
-\emph{Languages}: Java, Pig, Python, C, SQL.\\
-\emph{Frameworks}: Hadoop (Cloudera Certified Hadoop Developer), Spring, HBase, Mahout  \\
-\emph{Tools and  Platforms}: Weka, \LaTeX{}, Basics of R and Teradata\\
-\emph{Operating Systems}: Unix based Systems, Microsoft Windows.\\
+\emph{Languages}: Java, Pig, Python, C, SQL, Basics of R.\\
+\emph{Frameworks}: Hadoop (Cloudera Certified Hadoop Developer), HBase, Mahout  \\
+\emph{Tools and  Platforms}: Weka, \LaTeX{}, and Teradata\\
+%\emph{Operating Systems}: Unix based Systems, Microsoft Windows.\\
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
