--- a/resume/CVKrishnakumar_Resume.tex
+++ b/resume/CVKrishnakumar_Resume.tex
@@ -188,8 +188,7 @@
 % ALSO: \rcollength is the width of the right column of the table
 %       (adjust it to your liking; default is 1.85in).
 %
-\newlength{\rcollength}\setlength{\rcollength}{4in}%
-%
+\newlength{\rcollength}\setlength{\rcollength}{4in}
 
 \section{\textbf{Interests}} Large Scale Data Mining and Analysis, Machine Learning, Information Retrieval and Software Engineering
 
@@ -198,6 +197,7 @@
 \begin{innerlist}
 \item[] M.S. \href{http://www.cs.stanford.edu/}{Computer Science}\hfill{GPA: 3.86 / 4.0}
       \begin{innerlist}
+        
         \item Recipient of the prestigious \emph{BPCL Scholarship} awarded by Bharat Petroleum Corporation Ltd. awarded to an elite few for graduate study in the US.
      
          \item \emph{Relevant Coursework:} \href{http://cs229.stanford.edu}{Machine Learning},  Data Mining \& E-Business, \href{http://www-stat.stanford.edu/~tibs/stat315a.html}{Elements of Statistical Learning}, \href{http://www.stanford.edu/class/msande239/}{Computational Advertising}, \href{http://cs276.stanford.edu}{ Information Retrieval \& Web Search},  \href{http://cs228.stanford.edu}{Probabilistic Graphical Models}, \href{http://cs345a.stanford.edu}{Data Mining}, \href{http://cs347.stanford.edu}{Transaction Processing and Distributed Databases}, \href{http://snap.stanford.edu/na09/}{Network Analysis}.
@@ -229,16 +229,15 @@
 %        \end{innerlist}
 %\end{outerlist}
 \begin{outerlist}
-\item[] Software Engineer - Internet Services
+\item[] Software Engineer - Internet Services Advaced Data Analytics
 	\begin{outerlist}
-		\item[] Fraud Detection on  AppStore % \hfill{Sep '11 - May '13}
+		\item[] Fraud Detection on  iTunes AppStore % \hfill{Sep '11 - May '13}
 		\begin{innerlist}
 			\item Responsible for the end-to-end development of a fraud solution for the iTunes AppStore as a part of a small team; involved right from requirements gathering and conception to design, implementation and evaluation. 
 			\item Experienced with application of data mining, network analysis and machine learning techniques on massive scale data.
 			\item Designed and implemented a high performance scalable system that used  stream mining algorithms to risk transactions on real time data streams.
-			%\item Implemented a scalable version of the \emph{Belief propagation} that works on k-partite graphs with billions of nodes.
-			%\item Responsible for communication of the working of system to different stakeholders.
-			\item System currently in production.
+			\item Implemented a scalable version of the \emph{Belief propagation} that works on k-partite graphs with billions of nodes.
+			\item Also worked on a high performance data mining system to detect fraud in the path of transactions.
 			\item Used Pig, Java MapReduce, Mahout and HBase on the Hadoop ecosystem.
 		\end{innerlist}
 	\end{outerlist}
@@ -262,7 +261,7 @@
 \item[]  Intern - Internet Services \hfill{June '09 to Mar '10}
 \begin{innerlist}
         \item {Worked on automated sentiment analysis and opinion mining from Micro-blogs using a combination of sophisticated machine learning and data mining techniques.}
-        \item {Part of a two-member team that was responsible for the entire project from its conception and design to implementation and production deployment. }
+        \item {Part of a two-member team that was responsible for the entire project from its conception and design to implementation and production deployment.}
         \item {Project involved use and analysis of several state-of-the-art machine learning techniques for feature engineering, feature selection, skew handling in datasets, model comparisons for supervised learning, ensemble techniques for classifiers and evaluation of results.}
         \item {Used Java, LibSVM, Weka.}
 \end{innerlist}
