--- a/resume/CVKrishnakumar_Resume.tex
+++ b/resume/CVKrishnakumar_Resume.tex
@@ -58,7 +58,7 @@
             includefoot, % Uncomment to put page number above margin
             marginparwidth=1in,     % Length of section titles
             marginparsep=.01in,       % Space between titles and text
-            margin=0.18in,               % 1 inch margins
+            margin=0.1in,               % 1 inch margins
             includemp]{geometry}
 
 %% Use these lines for A4-sized paper
@@ -142,7 +142,7 @@
 % empty lines allows for the function of the first example with the
 % readability of the second example.
 \renewcommand{\section}[2]%
-        {\pagebreak[2]\vspace{0.8\baselineskip}%
+        {\pagebreak[2]\vspace{0.6\baselineskip}%
          \phantomsection\addcontentsline{toc}{section}{#1}%
          \hspace{0in}%
          \marginpar{
@@ -200,7 +200,7 @@
         
         \item Recipient of the prestigious \emph{BPCL Scholarship} awarded by Bharat Petroleum Corporation Ltd. awarded to an elite few for graduate study in the US.
      
-         \item \emph{Relevant Coursework:} \href{http://cs229.stanford.edu}{Machine Learning},  Data Mining \& E-Business, \href{http://www-stat.stanford.edu/~tibs/stat315a.html}{Elements of Statistical Learning}, \href{http://www.stanford.edu/class/msande239/}{Computational Advertising}, \href{http://cs276.stanford.edu}{ Information Retrieval \& Web Search},  \href{http://cs228.stanford.edu}{Probabilistic Graphical Models}, \href{http://cs345a.stanford.edu}{Data Mining}, \href{http://cs347.stanford.edu}{Transaction Processing and Distributed Databases}, \href{http://snap.stanford.edu/na09/}{Network Analysis}.
+         \item \emph{Relevant Coursework:} Machine Learning,  Data Mining \& E-Business, Elements of Statistical Learning, Computational Advertising,Information Retrieval \& Web SearchProbabilistic Graphical Models, Data Mining, Transaction Processing and Distributed DatabasesNetwork Analysis.
          %, Biomedical Systems Design(A+)
          %,  \href{http://www.stanford.edu/}{iPhone Application Programming}
          %, \href{http://cs245.stanford.edu}{Database Systems Principles}
@@ -214,8 +214,8 @@
 \item[] M Sc.(Tech.) {Information Systems} \hfill{CGPA: 9.95 / 10.0}
         \begin{innerlist}
         \item Ranked \#1 in Information Systems Department.
-        \item Recipient of the Silver Medal awarded by BITS to the second rank holder ampngst the graduating batch of 2008.
-        \item \emph{Relevant Coursework : }Artificial Intelligence, Data Structures \& Algorithms, Software Engineering, Probability \& Statistics, Discrete Structures for Computer Science, Data Mining.
+        \item Recipient of the Silver Medal awarded by BITS to the second rank holder amongst the graduating batch of 2008.
+        \item \emph{Relevant Coursework : }Data Mining, Artificial Intelligence, Data Structures \& Algorithms, Software Engineering, Probability \& Statistics, Discrete Structures for Computer Science, .
 %%        \item Course Topper in 20 courses, including Data Structures and Algorithms, Symbolic Logic and Software Engineering through my undergraduate study.
         \end{innerlist}
 \end{innerlist}
@@ -231,22 +231,16 @@
 \begin{outerlist}
 \item[] Software Engineer - Internet Services Advaced Data Analytics
 	\begin{outerlist}
-		\item[] Fraud Detection on  iTunes AppStore % \hfill{Sep '11 - May '13}
+		\item[] Fraud Detection on iTunes AppStore % \hfill{Sep '11 - May '13}
 		\begin{innerlist}
 			\item Responsible for the end-to-end development of a fraud solution for the iTunes AppStore as a part of a small team; involved right from requirements gathering and conception to design, implementation and evaluation. 
 			\item Experienced with application of data mining, network analysis and machine learning techniques on massive scale data.
 			\item Designed and implemented a high performance scalable system that used  stream mining algorithms to risk transactions on real time data streams.
-			\item Implemented a scalable version of the \emph{Belief propagation} that works on k-partite graphs with billions of nodes.
+			\item Implemented a scalable version of the \emph{Belief propagation algorithm} that works on k-partite graphs with billions of nodes.
 			\item Also worked on a high performance data mining system to detect fraud in the path of transactions.
 			\item Used Pig, Java MapReduce, Mahout and HBase on the Hadoop ecosystem.
 		\end{innerlist}
 	\end{outerlist}
-%	\begin{outerlist}
-%		\item[] Account Creation Fraud Detection on iTunes %\hfill{Jan '11 - May '12}
-%		\begin{innerlist}
-%			\item Implementated in Java.
-%		\end{innerlist}
-%	\end{outerlist}
 
 	\begin{outerlist}
 	\item[] Spam Detection on iTunes Ping %\hfill{Apr '10 - June '11}
@@ -256,6 +250,14 @@
 	        \end{innerlist}
 	\end{outerlist}
 \end{outerlist}
+	
+\begin{outerlist}
+	\item[] Software Engineer - Maps Data Insights %\hfill{Jan '11 - May '12}
+	\begin{innerlist}
+		\item Working on identification and analysis of interesting actionable patterns in the Maps data using large scale data mining and machine learning techniques.
+	\end{innerlist}
+\end{outerlist}
+
 
 \begin{outerlist}
 \item[]  Intern - Internet Services \hfill{June '09 to Mar '10}
@@ -269,12 +271,12 @@
 
 \blankline
 
-\href{http://www.hpl.hp.com/india/}{\textbf{Hewlett Packard Labs-India}\hspace{1cm}\textit{Research Intern}\hfill \textit{Jan '08 to June '08}}\\
+\href{http://www.hpl.hp.com/india/}{\textbf{Hewlett Packard Labs, India}\hspace{1cm}\textit{Research Intern}\hfill \textit{Jan '08 to June '08}}\\
 \emph{STAIR : System for Topical and Aggregated Information Retrieval.}
 
        \begin{compactitem}
-        \item {Developed the architecture and the prototype of STAIR - an IR system that  applied of a combination of Collaborative analysis and Focused Crawling techniques on the web documents to provide personalized, consolidated information relevant to the user as an aggregated PDF document.}        
-        \item {Implemented in on Java using Lucene. The semantics were obtained from WordNet.}
+        \item {Developed the architecture and prototype of STAIR - an IR system that  applied a combination of Collaborative analysis and Focused Crawling techniques on the web documents to provide personalized, consolidated information relevant to the user as an aggregated PDF document.}        
+        \item {Implemented in Java using Lucene. The semantics were obtained from WordNet.}
         \item Published as a \href{http://www.hpl.hp.com/techreports/2009/HPL-2009-51.pdf}{HP Labs Technical Report in 2009}.
        %\item \emph{Mentor : Dr. Krishnan Ramanathan}
        \end{compactitem}
@@ -303,13 +305,11 @@
 
 %\pagebreak
 \section{\textbf{Selected Projects}}
-%
-
 \textit{Recommendation Systems based on Delicious and Twitter} 
 \begin{compactitem}
 \item {Implemented a People Recommendation System on Twitter (in Python) by a combination of several algorithms, that included collaborative filtering and network analysis.}
 \item{Designed and implemented an URL Recommendation system by analysis of tags from \emph{Delicious}.}
-%\item \emph{Instructor: Prof. Andreas Weigend, Stanford University}
+\item \emph{Instructor: Prof. Andreas Weigend, Stanford University}
 \end{compactitem}
 \spc
 \textit{Role Discovery in Social Networks using Dirichlet Multinomial Regression Based Topic Modeling} 
@@ -322,14 +322,14 @@
 \textit{URL Recommendation Based on Asymmetric Tag Similarity and Diffusion-Based Grouping}
 \begin{compactitem}
 \item {Implemented an URL Recommendation system by analysis of tag similarity using data from ShareThis and Delicious using MapReduce and Partition based Joins on top of the Aster Cluster.}
-%\item \emph{Instructors : Prof. Jeff Ullman and Prof. Anand Rajaraman, Stanford University}
+\item \emph{Instructors : Prof. Jeff Ullman and Prof. Anand Rajaraman, Stanford University}
 \end{compactitem}
 \spc
 
 \textit{Finding Answerers on Yahoo! Answers}
 \begin{compactitem}
 \item {Designed and implemented a system for selection of most appropriate answerers in \emph{Yahoo! Answers} based on textual, structural and other auxiliary information. The result could be used to route new questions to potential answerers.}
-%\item \emph{Instructor :  Prof.Jure Leskovic, Stanford University}
+\item \emph{Instructor :  Prof.Jure Leskovic, Stanford University}
 \end{compactitem}
 \spc
 
@@ -343,7 +343,7 @@
 \textit{Comparison of Similarity Search Algorithms over Inverted Indexes}
 \begin{compactitem}
 \item {Implemented and analyzed the performance of commonly used indexing similarity search algorithms: Term-at-a-Time and Document-at-a-Time. Also optimized the algorithms  with efficient index compression.}
-%\item \emph{Instructors :  Prof.Andrei Broder and Prof. Vanja Josifovski, Stanford University}
+\item \emph{Instructors :  Prof.Andrei Broder and Prof. Vanja Josifovski, Stanford University}
 \end{compactitem}
 \spc
 
@@ -449,7 +449,6 @@ Consistent recipient of the \emph{Merit Scholarship} awarded by BITS Pilani to t
 %E-mail : vipul@apple.com\\
 
 \section{\textbf{Contact Information}}
-
 \begin{tabular}[t]{@{}p{\textwidth-\rcollength}p{\rcollength}}
 739 E El Camino Real Apt 112 & \textit{Email:}\href{mailto:cvkkumar@cs.stanford.edu}{cvkkumar@cs.stanford.edu}\\
 Sunnyvale, CA-94087   &  Ph: 408-462-5745 
