--- a/resume/CVKrishnakumar_Resume.tex
+++ b/resume/CVKrishnakumar_Resume.tex
@@ -193,14 +193,14 @@
 \section{\textbf{Interests}} Large Scale Data Mining and Analysis, Machine Learning, Information Retrieval and Software Engineering
 
 \section{\textbf{Education}}
-\href{http://www.stanford.edu/}{\textbf{Stanford University}},\hfill \textit{Sep '08 - Apr '10}
+\href{http://www.stanford.edu/}{\textbf{Stanford University}}\hfill \textit{Sep '08 - Apr '10}
 \begin{innerlist}
 \item[] M.S. \href{http://www.cs.stanford.edu/}{Computer Science}\hfill{GPA: 3.86 / 4.0}
       \begin{innerlist}
         
         \item Recipient of the prestigious \emph{BPCL Scholarship} awarded by Bharat Petroleum Corporation Ltd. awarded to an elite few for graduate study in the US.
      
-         \item \emph{Relevant Coursework:} Machine Learning,  Data Mining \& E-Business, Elements of Statistical Learning, Computational Advertising,Information Retrieval \& Web SearchProbabilistic Graphical Models, Data Mining, Transaction Processing and Distributed DatabasesNetwork Analysis.
+         \item \emph{Relevant Coursework:} Machine Learning, Data Mining \& E-Business, Elements of Statistical Learning, Computational Advertising, Information Retrieval \& Web Search, Probabilistic Graphical Models, Data Mining, Transaction Processing and Distributed Databases, Network Analysis.
          %, Biomedical Systems Design(A+)
          %,  \href{http://www.stanford.edu/}{iPhone Application Programming}
          %, \href{http://cs245.stanford.edu}{Database Systems Principles}
@@ -215,7 +215,7 @@
         \begin{innerlist}
         \item Ranked \#1 in Information Systems Department.
         \item Recipient of the Silver Medal awarded by BITS to the second rank holder amongst the graduating batch of 2008.
-        \item \emph{Relevant Coursework : }Data Mining, Artificial Intelligence, Data Structures \& Algorithms, Software Engineering, Probability \& Statistics, Discrete Structures for Computer Science, .
+        \item \emph{Relevant Coursework:}Data Mining, Artificial Intelligence, Data Structures \& Algorithms, Software Engineering, Probability \& Statistics, Discrete Structures for Computer Science.
 %%        \item Course Topper in 20 courses, including Data Structures and Algorithms, Symbolic Logic and Software Engineering through my undergraduate study.
         \end{innerlist}
 \end{innerlist}
@@ -229,15 +229,14 @@
 %        \end{innerlist}
 %\end{outerlist}
 \begin{outerlist}
-\item[] Software Engineer - Internet Services Advaced Data Analytics
+\item[] Software Engineer - Internet Services Advanced Data Analytics
 	\begin{outerlist}
 		\item[] Fraud Detection on iTunes AppStore % \hfill{Sep '11 - May '13}
 		\begin{innerlist}
-			\item Responsible for the end-to-end development of a fraud solution for the iTunes AppStore as a part of a small team; involved right from requirements gathering and conception to design, implementation and evaluation. 
+			\item Responsible for the end-to-end development of a solution to tackle reputation fraud on the iTunes AppStore as a part of a small team; involved right from requirements gathering and conception to design, implementation and evaluation. 
 			\item Experienced with application of data mining, network analysis and machine learning techniques on massive scale data.
-			\item Designed and implemented a high performance scalable system that used  stream mining algorithms to risk transactions on real time data streams.
-			\item Implemented a scalable version of the \emph{Belief propagation algorithm} that works on k-partite graphs with billions of nodes.
-			\item Also worked on a high performance data mining system to detect fraud in the path of transactions.
+			\item Implemented a high performance subsystem that used stream mining to risk transactions on real time data streams.
+			%\item Implemented a scalable version of the \emph{Belief propagation algorithm} that works on k-partite graphs with billions of nodes.
 			\item Used Pig, Java MapReduce, Mahout and HBase on the Hadoop ecosystem.
 		\end{innerlist}
 	\end{outerlist}
@@ -254,7 +253,7 @@
 \begin{outerlist}
 	\item[] Software Engineer - Maps Data Insights %\hfill{Jan '11 - May '12}
 	\begin{innerlist}
-		\item Working on identification and analysis of interesting actionable patterns in the Maps data using large scale data mining and machine learning techniques.
+		\item Worked on identification and analysis of interesting actionable patterns in the Maps logs using large scale data mining and machine learning techniques.
 	\end{innerlist}
 \end{outerlist}
 
@@ -263,7 +262,7 @@
 \item[]  Intern - Internet Services \hfill{June '09 to Mar '10}
 \begin{innerlist}
         \item {Worked on automated sentiment analysis and opinion mining from Micro-blogs using a combination of sophisticated machine learning and data mining techniques.}
-        \item {Part of a two-member team that was responsible for the entire project from its conception and design to implementation and production deployment.}
+        \item {Part of a two-member team that was responsible for the project from its conception and design to implementation and production deployment.}
         \item {Project involved use and analysis of several state-of-the-art machine learning techniques for feature engineering, feature selection, skew handling in datasets, model comparisons for supervised learning, ensemble techniques for classifiers and evaluation of results.}
         \item {Used Java, LibSVM, Weka.}
 \end{innerlist}
@@ -336,7 +335,7 @@
 \textit{Analysis of Text Based Classifiers}
 \begin{compactitem}
 \item {Implemented and analyzed the performance of different Na\"{\i}ve Bayes classifiers on the 20-Newsgroups dataset, using Java and Lucene.}
-%\item \emph{Instructors :  Prof.Chris Manning and Prof. Prabhakar Raghavan , Stanford University}
+\item \emph{Instructors :  Prof.Chris Manning and Prof. Prabhakar Raghavan , Stanford University}
 \end{compactitem}
 \spc
 
@@ -370,9 +369,10 @@
 \textit{RefMed - A Physician Referral and Review Service}
 \begin{compactitem}
 \item {Designed and developed a physician referral and review service that enables patients to review and rate the physicians and facilitates the physicians to recommend other doctors to their patients.}
-%\item \emph{Instructor :  Prof. Amar Das, Stanford University}
+\item \emph{Instructor :  Prof. Amar Das, Stanford University}
 \end{compactitem}
-%\spc
+\spc
+
 %\textit{An Ontology-based Automatic Staging system for Cancer}
 %\begin{compactitem}
 %\item {Developed a Automatic Staging System for Breast Cancer over the NCI Thesaurus using SWRL, OWL and Prot\'{e}g\'{e}}.
@@ -417,8 +417,8 @@
 
 \section{\textbf{Skills}}
 \emph{Languages}: Java, Pig, Python, C, SQL, Basics of R.\\
-\emph{Frameworks}: Hadoop (Cloudera Certified Hadoop Developer), HBase, Mahout  \\
-\emph{Tools and  Platforms}: Weka, \LaTeX{}, and Teradata\\
+\emph{Frameworks}: Hadoop (Cloudera Certified Hadoop Developer), HBase, Mahout.  \\
+\emph{Tools and  Platforms}: Weka, \LaTeX{}, and Teradata.\\
 %\emph{Operating Systems}: Unix based Systems, Microsoft Windows.\\
 
 
